logs/domainics.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/async_generator'...
Listing './lib/python3.5/site-packages/async_generator-1.8.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/asyncpg'...
Listing './lib/python3.5/site-packages/asyncpg/_testbase'...
Listing './lib/python3.5/site-packages/asyncpg/exceptions'...
Listing './lib/python3.5/site-packages/asyncpg/protocol'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/codecs'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/record'...
Listing './lib/python3.5/site-packages/asyncpg-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/domainics'...
Listing './lib/python3.5/site-packages/domainics/asyncdb'...
Compiling './lib/python3.5/site-packages/domainics/asyncdb/dmerge.py'...
***   File "./lib/python3.5/site-packages/domainics/asyncdb/dmerge.py", line 161
    _dsn_db << f"""
    INSERT INTO {table_name}
    ({', '.join(cols)}) VALUES
    ({','.join([ '{' + c + '}' for c in cols])})
    """
                   
                            
                              
                                                
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/domainics/asyncdb/drecall.py'...
***   File "./lib/python3.5/site-packages/domainics/asyncdb/drecall.py", line 100
    where_part += SQL(*(f"{c}={{{c}}}" for c in pk_pairs.keys()), sep=' AND ')
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/domainics/asyncdb/dset.py'...
*** Sorry: IndentationError: unexpected indent (dset.py, line 4)
Listing './lib/python3.5/site-packages/domainics/db'...
Compiling './lib/python3.5/site-packages/domainics/db/sqlblock.py'...
***   File "./lib/python3.5/site-packages/domainics/db/sqlblock.py", line 203
    return f'SQLSegment(text=\"{self.text}\")'
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/domainics/domobj'...
Listing './lib/python3.5/site-packages/domainics-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest_asyncio'...
Listing './lib/python3.5/site-packages/pytest_asyncio-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/redbean'...
Listing './lib/python3.5/site-packages/redbean-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlblock'...
Compiling './lib/python3.5/site-packages/sqlblock/asyncpg.py'...
***   File "./lib/python3.5/site-packages/sqlblock/asyncpg.py", line 111
    _logger.debug(f"{str(exc):}\nSQL: {sql_stmt}\nPARAMS: {sql_vals}")
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlblock/sqltext.py'...
***   File "./lib/python3.5/site-packages/sqlblock/sqltext.py", line 102
    sql_text += f"${var_counter}"
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlblock-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/asyncdb'...
Compiling './lib/python3.5/site-packages/test/asyncdb/test_sqlblock.py'...
***   File "./lib/python3.5/site-packages/test/asyncdb/test_sqlblock.py", line 82
    db << f"INSERT INTO {table_name} (sn, name) VALUES ({{sn}}, {{name}})"
                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/domobj'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
